bring up the tags endpoint
